few fixes